完成了基本界面，还差导航条建立以及增加额外的功能

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -49,5 +49,9 @@
   "comment": {
     "dataSource": "MongoDs",
     "public": true
+  },
+  "Profile": {
+    "dataSource": "MongoDs",
+    "public": true
   }
 }
