--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "angular-material": "^1.0.7",
     "angular-messages": "^1.5.5",
     "angular-moment": "^1.0.0-beta.5",
+    "angular-momentjs": "^0.2.2",
     "compression": "^1.0.3",
     "cors": "^2.5.2",
     "errorhandler": "^1.1.1",
